# cplusplus-solus-mate-vscode

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp
